# youtube-auto-publish

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  test.py
.github/workflows/: python-publish.yml
auto_youtube/: __init__.py  __main__.py  config.py  web_browser.py
sample/: Dockerfile  docker-compose.yaml  run.py
tests/unit/: main_test.py
youtube_auto_publish/: __init__.py
