[project]
name = "auto-youtube"
authors = [{name = "Lucas Gasque", email = "lucasfdg@hotmail.com"}]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.22.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.8",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/LucasGasque/auto-youtube"
Issues = "https://github.com/LucasGasque/auto-youtube/issues"

[tool.setuptools.dynamic]
version = {attr = "auto_youtube.__version__"}